--- a/index.html
+++ b/index.html
@@ -3,9 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Simple Bank</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/94adae635e.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <header>
+        <nav class="nav-bar">
+            <ul class="nav-list">
+                <li><a href="/">Home</a></li>
+                <li><a href="/about">About</a></li>
+                <li><a href="/service">Service</a></li>
+                <li><a href="/contact">Contact</a></li>
+            </ul>
+            <p><a class="logo" href="/">logo</a></p>
+        </nav>
+    </header>
+    <main class="main-sec">
+        <div>
+            <h2 class="title">online</h2>
+            <h1 class="heading">Cashback</h1>
+            <p class="banner-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br> Corporis voluptates nam veniam mollitia a eos reiciendis totam odit libero molestias?</p>
+            <button class="learn-btn">get started</button>
+        </div>
+        <div>
+            <img class="bank-img" src="https://i.ibb.co/JrxFnW9/bank.png" alt="">
+        </div>
+    </main>
     
 </body>
 </html>
